Refactor IntelliJ plugin and add new features
Extract shared approve call logic into ApproveCallUtil. Simplify
InventoryUtil to use direct file lookup and add findTestMethod.
Add "Compare with Received" on approved file banners and "Jump to
Test" on received file banners. Guard against null project in
actions. Replace internal API usage in tests. Add tests for
ApproveCallUtil and ApprovedFileUtil.findReceivedFile. Update
plugin.xml description and manual chapter.